--- a/index.html
+++ b/index.html
@@ -801,9 +801,12 @@
                     <p class="sub-title">а коли використали алгоритм та інструменти, які є в цій навчальній програмі.
                     </p>
                 </div>
-                <img class="decor" src="img/training-decor.svg" alt="">
-                <img class="goblet" src="img/goblet.svg" alt="">
-                <p class="text"><span>500 000 ₴ </span> дають прогріви та воронки в stories нам тепер.</p>
+                <img class="decor desck" src="img/training-decor.svg" alt="">
+                <img class="decor mobile" src="img/training-decor-mob.svg" alt="">
+                <div class="">                
+                    <img class="goblet" src="img/goblet.svg" alt="">
+                    <p class="text"><span>500 000 ₴ </span> дають прогріви та воронки в stories нам тепер.</p>
+                </div>
             </div>
             <h2>Як проходить<br><span>навчання?</span></h2>
             <div class="items slider-training">
@@ -872,8 +875,10 @@
                 <img class="img-bonus" src="img/bonus.png" alt="Бонус">
                 <p><span>* тільки на цьому потоці на курсі з монетизації stories :)</span><br>
                     Ти отримаєш матеріали курсу зі stories-мейкінгу, якщо відчуваєш, що треба підтягнути базу.</p>
-                <a href="" class="button button-white">Зайняти місце на курсі</a>
-                <img class="img-phone" src="img/bonus-phone.png" alt="">
+                <a href="" class="button button-white">Зайняти місце <span></span></a>
+                <img class="img-phone desck" src="img/bonus-phone.png" alt="">
+                <img class="img-phone mobile" src="img/bonus-phone-mob.png" alt="">
+
             </div>
         </div>
     </section>
