--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                 <div class="speaker">
                     <div class="head">
                         <div class="avatar">
-                            <img src="img/nata.png" alt="">
+                            <img src="img/annaDah.jpg" alt="">
                         </div>
                         <div class="text">
                             <p>Lead of Monetization department</p>
@@ -269,7 +269,7 @@
                         </div>
                     </div>
                     <div class="about">
-                        <p class="descriprion">На курсі навчить створювати ефективні прогріви та працювати з тригерами
+                        <p class="descriprion">На курсі навчить створювати ефективні прогріви та працювати з тригерами.
                         </p>
                         <!-- <h6><span><img src="img/photo.svg" alt=""></span>
                             працювала з:</h6>
@@ -284,16 +284,16 @@
                 <div class="speaker">
                     <div class="head">
                         <div class="avatar">
-                            <img src="img/nata.png" alt="">
+                            <img src="img/astahova.jpeg" alt="">
                         </div>
                         <div class="text">
-                            <p>Головна по сторителінгу в Україні</p>
+                            <p>Королева of storytelling в Україні</p>
                             <p>Олена Астахова</p>
                         </div>
                     </div>
                     <div class="about">
                         <p class="descriprion">На курсі розповість про storytelling і те, які механіки допоможуть
-                            утримати увагу до кінця</p>
+                            утримати увагу до кінця.</p>
                         <h6><span><img src="img/photo.svg" alt=""></span>
                             працювала з:</h6>
                         <p>Apple та Netflix</p>
@@ -306,7 +306,7 @@
                 <div class="speaker">
                     <div class="head">
                         <div class="avatar">
-                            <img src="img/nata.png" alt="">
+                            <img src="img/krikun.jpeg" alt="">
                         </div>
                         <div class="text">
                             <p>Дипломована психологиня</p>
@@ -314,14 +314,61 @@
                         </div>
                     </div>
                     <div class="about">
-                        <p class="descriprion">На курсі розповість про синдромом самозванця і про те як його знищити</p>
+                        <p class="descriprion">На курсі розповість про синдромом самозванця і про те як його знищити.
+                        </p>
                         <h6><span><img src="img/photo.svg" alt=""></span>
                             працювала з:</h6>
                         <p>Portmone.com, MSD Ukraine, Harley-Davidson Ukraine, TM byMe, NATUREAL</p>
                         <h6><span><img src="img/star.svg" alt=""></span>досягнення:</h6>
-                        <p>В психології понад 7 років. Веде приватну практику онлайн та офлайн (Київ). Проводить семінари, лекції, воркшопи на різні психологічні теми.</p>
+                        <p>В психології понад 7 років. Веде приватну практику в онлайн- та офлайн-форматах. Проводить
+                            семінари, лекції, воркшопи на різні психологічні теми.</p>
                     </div>
                 </div>
+
+                <div class="speaker">
+                    <div class="head">
+                        <div class="avatar">
+                            <img src="img/krikun.jpeg" alt="">
+                        </div>
+                        <div class="text">
+                            <p>Head of Education</p>
+                            <p>Аліна Лещук</p>
+                        </div>
+                    </div>
+                    <div class="about">
+                        <p class="descriprion">На курсі розповість про роботу з клієнтом та познайомить ближче з аналітикою й методикою OKR.
+                        </p>
+                        <h6><span><img src="img/photo.svg" alt=""></span>
+                            працювала з:</h6>
+                        <p>Portmone.com, MSD Ukraine, Harley-Davidson Ukraine, TM byMe, NATUREAL</p>
+                        <!-- <h6><span><img src="img/star.svg" alt=""></span>досягнення:</h6>
+                        <p>В психології понад 7 років. Веде приватну практику в онлайн- та офлайн-форматах. Проводить
+                            семінари, лекції, воркшопи на різні психологічні теми.</p> -->
+                    </div>
+                </div>
+                <div class="speaker">
+                    <div class="head">
+                        <div class="avatar">
+                            <img src="img/nata.jpg" alt="">
+                        </div>
+                        <div class="text">
+                            <p>Head of Media and PR</p>
+                            <p>Наталя Онашко</p>
+                        </div>
+                    </div>
+                    <div class="about">
+                        <p class="descriprion">На курсі розкаже про storytelling і його інструменти, чат-боти та інфоприводи. Навчить збільшувати охоплення в декілька разів.
+                        </p>
+                        <h6><span><img src="img/photo.svg" alt=""></span>
+                            працювала з:</h6>
+                        <p>FOREO, Maybelline, Vanish, KOTEX, Yamaha Music та інші. </p>
+                        <h6><span><img src="img/star.svg" alt=""></span>досягнення:</h6>
+                        <p>Створила ютуб-канал, на якому, без реклами та вийнятково завдяки контенту, набрала з нуля – 1 500 000 підписників. 
+                            Запускала англомовні проєкти в інстаграм та ютуб. 
+                            Запускала кросплатформенні проєкти бренду.</p>
+                    </div>
+                </div>
+    
             </div>
             <a href="" class="button button-black">зайняти місце<span></span></a>
         </div>
@@ -803,7 +850,7 @@
                 </div>
                 <img class="decor desck" src="img/training-decor.svg" alt="">
                 <img class="decor mobile" src="img/training-decor-mob.svg" alt="">
-                <div class="">                
+                <div class="">
                     <img class="goblet" src="img/goblet.svg" alt="">
                     <p class="text"><span>500 000 ₴ </span> дають прогріви та воронки в stories нам тепер.</p>
                 </div>
@@ -890,10 +937,19 @@
             </h2>
             <div class="reviews-slider">
                 <img src="img/review-1.png" alt="">
-                <img src="img/review-1.png" alt="">
-                <img src="img/review-1.png" alt="">
-                <img src="img/review-1.png" alt="">
-                <img src="img/review-1.png" alt="">
+                <img src="img/review-2.png" alt="">
+                <img src="img/review-3.png" alt="">
+                <img src="img/review-4.png" alt="">
+                <img src="img/review-5.png" alt="">
+                <img src="img/review-6.png" alt="">
+                <img src="img/review-8.png" alt="">
+                <img src="img/review-9.png" alt="">
+                <img src="img/review-10.png" alt="">
+                <img src="img/review-11.png" alt="">
+                <img src="img/review-12.png" alt="">
+                <img src="img/review-13.png" alt="">
+                <img src="img/review-14.png" alt="">
+                <img src="img/review-15.png" alt="">
             </div>
         </div>
     </section>
@@ -982,7 +1038,7 @@
                     </article>
                 </div>
             </div>
-            <a class="button" href="">зайняти місце<span></span></a>
+            <a class="button button-purple" href="">зайняти місце<span></span></a>
         </div>
     </section>
     <!------------SUPPORT BLOCK------>
