--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="#bl7" data-widget-handler="1695799517" class="button ">зайняти місце <span></span></a>
+                        <a   data-widget-handler="1695799517" class="button ">зайняти місце <span></span></a>
                         <a href="https://telegram.me/KukurudzaSchool_bot?start=6513d9fc2e104f18d416520e
                         " class="button button-booking">забронювати місце</a>
                     </div>
@@ -837,7 +837,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="#bl7" data-widget-handler="1695799503" class="button">зайняти місце <span></span></a>
+                        <a   data-widget-handler="1695799503" class="button">зайняти місце <span></span></a>
                         <a href="https://telegram.me/KukurudzaSchool_bot?start=6513da02978f28e541704d56"
                             class="button button-booking">забронювати місце</a>
                     </div>
