--- a/index.html
+++ b/index.html
@@ -759,11 +759,12 @@
                                 <div class="cost-sale">
                                     <p>7600 UAH</p>
                                 </div>
+                                <p class="text">Вартість виросте за 3 дні</p>
                             </div>
                         </div>
                         <a   data-widget-handler="1695799517" class="button ">зайняти місце <span></span></a>
                         <a href="https://telegram.me/KukurudzaSchool_bot?start=6513d9fc2e104f18d416520e
-                        " class="button button-booking">забронювати місце</a>
+                        " class="button button-booking">ОПЛАТА ЧАСТИНАМИ</a>
                     </div>
                     <div class="rate">
                         <script type="module"
@@ -835,11 +836,14 @@
                                 <div class="cost-sale">
                                     <p>24 600 UAH</p>
                                 </div>
+                                <p class="text">Тільки 5 місць<br>
+                                    Вартість виросте за 3 дні
+                                    </p>
                             </div>
                         </div>
                         <a   data-widget-handler="1695799503" class="button">зайняти місце <span></span></a>
                         <a href="https://telegram.me/KukurudzaSchool_bot?start=6513da02978f28e541704d56"
-                            class="button button-booking">забронювати місце</a>
+                            class="button button-booking">ОПЛАТА ЧАСТИНАМИ</a>
                     </div>
                 </div>
             </div>
